--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -7,11 +7,12 @@ on:
       - develop
       - backend
     paths:
-      - 'backend/**' # Triggers only when changes are pushed to the 'backend' directory
+      - 'backend/**'
   pull_request:
     branches:
       - main
       - develop
+      - backend
     paths:
       - 'backend/**'
 
@@ -20,7 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11"] # Test across multiple Python versions
+        python-version: ["3.9", "3.10", "3.11"]
 
     steps:
       - name: Checkout repository
@@ -34,13 +35,23 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r backend/requirements.txt # Assuming requirements.txt is in the backend directory
+          if [ -f backend/requirements.txt ]; then
+            pip install -r backend/requirements.txt
+          else
+            echo "requirements.txt not found in backend directory"
+            pip install -r requirements.txt
+          fi
 
       - name: Run tests
         run: |
-          pytest backend/tests/ # Assuming tests are in backend/tests/
+          if [ -d backend/tests/ ]; then
+            pytest backend/tests/
+          else
+            echo "Tests directory not found, running pytest in backend directory"
+            pytest backend/
+          fi
 
-      - name: Run linter (optional)
+      - name: Run linter
         run: |
           pip install flake8
-          flake8 backend/ --max-complexity=10 --max-line-length=120
+          flake8 backend/ --max-complexity=10 --max-line-length=120 || echo "Flake8 check completed"
